--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@internationalized/date": "3.6.0",
+    "@nextui-org/react": "^2.6.10",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.15.0",
     "next": "15.1.0",
     "pocketbase": "^0.22.1",
     "react": "^19.0.0",
-    "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
